--- a/src/Assets/styles.scss
+++ b/src/Assets/styles.scss
@@ -2,6 +2,7 @@ $primary: rgba(225, 242, 255, 1);
 $info :#f0542b;
 $background: #CEE9FF;
 
+
 .no-caret .dropdown-toggle::after {
     display: none !important;
 }
@@ -57,6 +58,14 @@ $background: #CEE9FF;
 
 
 @import "bootstrap/scss/bootstrap";
+
+$header: #004E89;
+
+.bg-header {
+    background-color: #004E89;
+
+}
+
 
 .border-blue {
     border-color: rgba(0, 0, 255, 1) !important; // màu xanh tùy chỉnh
