--- a/src/Assets/styles.scss
+++ b/src/Assets/styles.scss
@@ -2,6 +2,7 @@ $primary: rgba(225, 242, 255, 1);
 $info :#f0542b;
 $background: #CEE9FF;
 
+$success :#0000FF;
 
 .no-caret .dropdown-toggle::after {
     display: none !important;
@@ -65,6 +66,7 @@ $header: #004E89;
     background-color: #004E89;
 
 }
+
 
 
 .border-blue {
